--- a/index.html
+++ b/index.html
@@ -5,62 +5,69 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web Studio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header>
-      <a href="/index.html">Webstudio</a>
-
-      <nav>
-        <ul>
-          <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+      <nav class="site-nav">
+        <ul class="list">
+          <li>
+            <a href="./index.html" class="logo"><span class="accent">Web</span>studio</a>
+          </li>
+          <li><a href="./index.html" class="link current">Studio</a></li>
+          <li><a href="./portfolio.html" class="link">Portfolio</a></li>
+          <li><a href="" class="link">Contacts</a></li>
         </ul>
       </nav>
 
-      <address>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+      <address class="contacts">
+        <ul class="list">
+          <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+          <li><a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a></li>
+        </ul>
       </address>
     </header>
 
     <main>
       <!-- Hero page -->
-      <section>
-        <h1>
+      <section class="hero">
+        <h1 class="hero-title">
           Effective Solutions <br />
           for Your Business
         </h1>
-        <button type="button">Order Service</button>
+        <button type="button" class="button primary">Order Service</button>
       </section>
 
       <!-- Advantages -->
-      <section>
-        <h2>Advantages</h2>
-        <ul>
+      <section class="section">
+        <h2 class="section-title" hidden>Advantages</h2>
+        <ul class="advantage-list list">
           <li>
-            <h3>Strategy</h3>
+            <h3 class="title">Strategy</h3>
             <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
           </li>
           <li>
-            <h3>Punctuality</h3>
+            <h3 class="title">Punctuality</h3>
             <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
           </li>
           <li>
-            <h3>Diligence</h3>
+            <h3 class="title">Diligence</h3>
             <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
           </li>
           <li>
-            <h3>Technologies</h3>
+            <h3 class="title">Technologies</h3>
             <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
           </li>
         </ul>
       </section>
 
       <!-- What are we doing -->
-      <section>
-        <h2>What Are We Doing</h2>
-        <ul>
+      <section class="section">
+        <h2 class="section-title">What Are We Doing</h2>
+        <ul class="list">
           <li><img src="./images/computer.jpg" alt="Desktop app" width="360" height="300" /></li>
           <li><img src="./images/social-media.jpg" alt="Social media" width="360" height="300" /></li>
           <li><img src="./images/telephone.jpg" alt="Phone app" width="360" height="300" /></li>
@@ -68,36 +75,36 @@
       </section>
 
       <!-- Our team -->
-      <section>
-        <h2>Our Team</h2>
-        <ul>
+      <section class="section">
+        <h2 class="section-title">Our Team</h2>
+        <ul class="team-list list">
           <li>
             <img src="./images/mark-guerrero.jpg" alt="Mark Guerrero" width="264" height="260" />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="title">Mark Guerrero</h3>
+            <p class="member-description">Product Designer</p>
           </li>
           <li>
             <img src="./images/tom-ford.jpg" alt="Tom Ford" width="264" height="260" />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="title">Tom Ford</h3>
+            <p class="member-description">Frontend Developer</p>
           </li>
           <li>
             <img src="./images/camila-garcia.jpg" alt="Camila Garcia" width="264" height="260" />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="title">Camila Garcia</h3>
+            <p class="member-description">Marketing</p>
           </li>
           <li>
             <img src="./images/daniel-wilson.jpg" alt="Daniel Wilson" width="264" height="260" />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="title">Daniel Wilson</h3>
+            <p class="member-description">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
 
-    <footer>
-      <a href="./index.html">Webstudio</a>
-      <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+    <footer class="footer">
+      <a href="./index.html" class="logo"><span class="accent">Web</span>studio</a>
+      <p class="text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
   </body>
 </html>
